--- a/shoes_product6.html
+++ b/shoes_product6.html
@@ -3,7 +3,7 @@
 <head style="background-color: white;">
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Nike Air Max 270</title>
+  <title>Nike Infinity Golf Shoes</title>
   <style>
     html,body {
             margin: 0;
@@ -351,7 +351,7 @@
 
       <div class="product-details">
         <h1>Nike Infinity Golf Shoes</h1>
-        <h2> ₹17,495.00</h2>
+        <h2> ₹17494.99</h2>
 
         <p><strong>Description:</strong> Engineered for stability and comfort, the Nike Infinity Golf Shoes deliver responsive cushioning, excellent grip, and a sleek design.</p>
 
@@ -368,7 +368,7 @@
         </div>
 
         <div class="add-to-bag-container">
-          <button class="add-to-bag" onclick="addToCart(this)" data-id="306" data-name="Nike Infinity Golf Shoes" data-price="₹17,495.00">
+          <button class="add-to-bag" onclick="addToCart(this)" data-id="306" data-name="Nike Infinity Golf Shoes" data-price="17494.99">
   		        Add to Bag
 	        </button>
         </div>
