--- a/football_product1.html
+++ b/football_product1.html
@@ -368,7 +368,7 @@
         </div>
 
         <div class="add-to-bag-container">
-          <button class="add-to-bag" onclick="addToCart(this)" data-id="401" data-name="Liverpool 24-25 Home Jersey" data-price="₹1300.00">
+          <button class="add-to-bag" onclick="addToCart(this)" data-id="401" data-name="Liverpool 24-25 Home Jersey" data-price="4695.00">
   		        Add to Bag
 	        </button>
         </div>
