--- a/shoes_product7.html
+++ b/shoes_product7.html
@@ -3,7 +3,7 @@
 <head style="background-color: white;">
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Nike Air Max 270</title>
+  <title>Nike Mercurial Vapor 16</title>
   <style>
     html,body {
             margin: 0;
@@ -350,7 +350,7 @@
 
       <div class="product-details">
         <h1>Nike Mercurial Vapor 16</h1>
-        <h2> ₹27,095.00</h2>
+        <h2> ₹27094.99</h2>
 
         <p><strong>Description:</strong> Built for pure speed, the Nike Mercurial Vapor 16 features a lightweight design, responsive traction, and a snug fit that locks you in. Engineered for explosive acceleration and precision control</p>
 
@@ -367,7 +367,7 @@
         </div>
 
         <div class="add-to-bag-container">
-          <button class="add-to-bag" onclick="addToCart(this)" data-id="307" data-name="Nike Mercurial Vapor 16" data-price="₹27,095.00">
+          <button class="add-to-bag" onclick="addToCart(this)" data-id="307" data-name="Nike Mercurial Vapor 16" data-price="27094.99">
   		        Add to Bag
 	        </button>
         </div>
