--- a/football_product2.html
+++ b/football_product2.html
@@ -3,7 +3,7 @@
 <head style="background-color: white;">
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Athletix - Football</title>
+  <title>Nike PSG 24-25 Home kit</title>
   <style>
     html,body {
             margin: 0;
@@ -368,7 +368,7 @@
         </div>
 
           <div class="add-to-bag-container">
-          <button class="add-to-bag" onclick="addToCart(this)" data-id="402" data-name="Nike PSG 24-25 Home kit" data-price=" ₹ 4695.00">
+          <button class="add-to-bag" onclick="addToCart(this)" data-id="402" data-name="Nike PSG 24-25 Home kit" data-price=" 4695.00">
   		        Add to Bag
 	        </button>
         </div>
