--- a/football_product3.html
+++ b/football_product3.html
@@ -3,7 +3,7 @@
 <head style="background-color: white;">
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Athletix - Football</title>
+  <title>Nike F.C. Barcelona Academy Pro Third</title>
   <style>
     html,body {
             margin: 0;
@@ -368,7 +368,7 @@
         </div>
 
         <div class="add-to-bag-container">
-          <button class="add-to-bag" onclick="addToCart(this)" data-id="403" data-name="Nike Kids T-shirt" data-price="129.99">
+          <button class="add-to-bag" onclick="addToCart(this)" data-id="403" data-name="Nike Kids T-shirt" data-price="3795.00">
   		        Add to Bag
 	        </button>
         </div>
