--- a/shoes_product8.html
+++ b/shoes_product8.html
@@ -3,7 +3,7 @@
 <head style="background-color: white;">
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Nike Air Max 270</title>
+  <title>Nike G.T. Basketball Shoes</title>
   <style>
     html,body {
             margin: 0;
@@ -351,7 +351,7 @@
 
       <div class="product-details">
         <h1>Nike G.T. Basketball Shoes</h1>
-        <h2> ₹18,395.00</h2>
+        <h2> ₹18394.99</h2>
 
         <p><strong>Description:</strong> Engineered for next-level performance, the Nike G.T. Basketball Shoes deliver explosive energy return, lightweight support, and elite traction. Built for players who push the pace and own the court.</p>
 
@@ -368,7 +368,7 @@
         </div>
 
         <div class="add-to-bag-container">
-          <button class="add-to-bag" onclick="addToCart(this)" data-id="308" data-name="Nike G.T. Basketball Shoes" data-price="₹18,395.00">
+          <button class="add-to-bag" onclick="addToCart(this)" data-id="308" data-name="Nike G.T. Basketball Shoes" data-price="18394.99">
   		        Add to Bag
 	        </button>
         </div>
