--- a/football_product6.html
+++ b/football_product6.html
@@ -3,7 +3,7 @@
 <head style="background-color: white;">
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Athletix - Football</title>
+  <title>Nike Mercurial Football Shinguards</title>
   <style>
     html,body {
             margin: 0;
@@ -364,7 +364,7 @@
         </div>
 
        <div class="add-to-bag-container">
-          <button class="add-to-bag" onclick="addToCart(this)" data-id="406" data-name="Nike Mercurial Football Shinguards" data-price="₹ 1895.00">
+          <button class="add-to-bag" onclick="addToCart(this)" data-id="406" data-name="Nike Mercurial Football Shinguards" data-price="1895.00">
   		        Add to Bag
 	        </button>
         </div>
