--- a/shoes_product9.html
+++ b/shoes_product9.html
@@ -3,7 +3,7 @@
 <head style="background-color: white;">
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Nike Air Max 270</title>
+  <title>Nike Air Max Nuaxis</title>
   <style>
     html,body {
             margin: 0;
@@ -351,7 +351,7 @@
 
       <div class="product-details">
         <h1>Nike Air Max Nuaxis</h1>
-        <h2> ₹8,495.00</h2>
+        <h2> ₹8494.99</h2>
 
         <p><strong>Description:</strong> Fusing bold design with everyday comfort, the Nike Air Max Nuaxis features a layered upper, visible Air cushioning, and a futuristic look made for modern street style.</p>
 
@@ -368,7 +368,7 @@
         </div>
 
        <div class="add-to-bag-container">
-          <button class="add-to-bag" onclick="addToCart(this)" data-id="309" data-name="Nike Air Max Nuaxis" data-price="₹8,495.00">
+          <button class="add-to-bag" onclick="addToCart(this)" data-id="309" data-name="Nike Air Max Nuaxis" data-price="₹8494.99">
   		        Add to Bag
 	        </button>
         </div>
