--- a/basketball_athletix.html
+++ b/basketball_athletix.html
@@ -315,15 +315,15 @@
             </div>
             <div class="product-card">
                 <a href="basketball_product5.html">
-                    <img src="https://contents.mediadecathlon.com/p2705063/cbcf10d75769ff2ce993d1bf3079f8d8/p2705063.jpg?format=auto&quality=70&f=1024x0" alt="Adult Basketball BT500 Grip Size 7 - Brown/Orange">
-                    <h3>Adult Basketball BT500 Grip Size 7 - Brown/Orange</h3>
+                    <img src="https://static.nike.com/a/images/t_PDP_1728_v1/f_auto,q_auto:eco,u_126ab356-44d8-4a06-89b4-fcdcc8df0245,c_scale,fl_relative,w_1.0,h_1.0,fl_layer_apply/bc439045-fe19-450e-99fc-dd48179d2f40/JORDAN+ULTIMATE+2.0+8P.png">
+                    <h3>Nike Jordan Ultimate 2.0</h3>
                 </a>
                 <p>₹1,499</p>
             </div>
             <div class="product-card">
                 <a href="basketball_product6.html">
-                    <img src="https://contents.mediadecathlon.com/p2439549/65c77e53b85c61bd89fa51d68ec49379/p2439549.jpg?format=auto&quality=70&f=1024x0" alt="Basketball air pump">
-                    <h3>Basketball air pump</h3>
+                    <img src="https://static.nike.com/a/images/t_PDP_1728_v1/f_auto,q_auto:eco,u_126ab356-44d8-4a06-89b4-fcdcc8df0245,c_scale,fl_relative,w_1.0,h_1.0,fl_layer_apply/94b0882a-e39e-417f-848d-0a9cd173f374/JORDAN+ESSENTIAL+BALL+PUMP.png">
+                    <h3>Jordan Essential's air pump</h3>
                 </a>
                 <p>₹599</p>
             </div>
