--- a/basketball_product5.html
+++ b/basketball_product5.html
@@ -3,7 +3,7 @@
 <head style="background-color: white;">
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Tarmak BT500</title>
+  <title>Jordan Ultimate 2.0</title>
   <style>
     html,body {
             margin: 0;
@@ -340,13 +340,12 @@
 
     <div class="product-container">
       <div class="product-images">
-        <img id="mainImage" class="main-image" src="https://contents.mediadecathlon.com/p2705063/cbcf10d75769ff2ce993d1bf3079f8d8/p2705063.jpg" alt="Cricket T-shirt" />
+        <img id="mainImage" class="main-image" src="https://static.nike.com/a/images/t_PDP_1728_v1/f_auto,q_auto:eco,u_126ab356-44d8-4a06-89b4-fcdcc8df0245,c_scale,fl_relative,w_1.0,h_1.0,fl_layer_apply/bc439045-fe19-450e-99fc-dd48179d2f40/JORDAN+ULTIMATE+2.0+8P.png" alt="Cricket T-shirt" />
         
         <div class="thumbnail-container">
-          <img class="thumbnail active" src="https://contents.mediadecathlon.com/p2705063/cbcf10d75769ff2ce993d1bf3079f8d8/p2705063.jpg" onclick="changeImage(this)" alt="Nike Air Max 270Front View">
-          <img class="thumbnail" src="https://contents.mediadecathlon.com/p2797666/ea6c9705c86954b8475ba99d029a8910/p2797666.jpg" onclick="changeImage(this)" alt="Nike Air Max 270 Side View">
-          <img class="thumbnail" src="https://contents.mediadecathlon.com/p2797663/602ac1d348d582d99f9f690bd4a92310/p2797663.jpg" onclick="changeImage(this)" alt="Nike Air Max 270 Top View">
-          <img class="thumbnail" src="https://contents.mediadecathlon.com/p2797664/1ce0060e279a79560956d03f85392f86/p2797664.jpg" onclick="changeImage(this)" alt="Nike Air Max 270 Back View">
+          <img class="thumbnail active" src="https://static.nike.com/a/images/t_PDP_1728_v1/f_auto,q_auto:eco,u_126ab356-44d8-4a06-89b4-fcdcc8df0245,c_scale,fl_relative,w_1.0,h_1.0,fl_layer_apply/bc439045-fe19-450e-99fc-dd48179d2f40/JORDAN+ULTIMATE+2.0+8P.png" onclick="changeImage(this)" alt="Nike Air Max 270Front View">
+          <img class="thumbnail" src="https://static.nike.com/a/images/t_PDP_1728_v1/f_auto,q_auto:eco,u_126ab356-44d8-4a06-89b4-fcdcc8df0245,c_scale,fl_relative,w_1.0,h_1.0,fl_layer_apply/89c68f07-2ef7-4f26-9b6d-bf59c281da2c/JORDAN+ULTIMATE+2.0+8P.png" onclick="changeImage(this)" alt="Nike Air Max 270 Side View">
+  
         </div>
       </div>
 
