--- a/kids_product2.html
+++ b/kids_product2.html
@@ -3,7 +3,7 @@
 <head style="background-color: white;">
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Essentials Allover Print Jogger Set</title>
+  <title>Kids' (Boys') Training Top</title>
   <style>
     html,body {
             margin: 0;
@@ -339,19 +339,19 @@
 
     <div class="product-container">
       <div class="product-images">
-        <img id="mainImage" class="main-image" src="https://assets.adidas.com/images/h_2000,f_auto,q_auto,fl_lossy,c_fill,g_auto/ba14eb8bc02f4013b47932f27fa619c2_9366/Essentials_Allover_Print_Jogger_Set_Kids_Blue_IW1002_01_laydown.jpg" alt="Nike Air Max 270" />
+        <img id="mainImage" class="main-image" src="https://static.nike.com/a/images/t_PDP_1728_v1/f_auto,q_auto:eco/64ff2848-6ccf-4361-b314-e7ddef820340/B+NK+DF+SS+MILER+TOP.png" alt="Nike Air Max 270" />
         
         <div class="thumbnail-container">
-          <img class="thumbnail active" src="https://assets.adidas.com/images/h_2000,f_auto,q_auto,fl_lossy,c_fill,g_auto/ba14eb8bc02f4013b47932f27fa619c2_9366/Essentials_Allover_Print_Jogger_Set_Kids_Blue_IW1002_01_laydown.jpg" onclick="changeImage(this)" alt="Nike Air Max 270 Front View">
-          <img class="thumbnail" src="https://assets.adidas.com/images/h_2000,f_auto,q_auto,fl_lossy,c_fill,g_auto/2bd67e17db834aacba3599f98db51f73_9366/Essentials_Allover_Print_Jogger_Set_Kids_Blue_IW1002_03_laydown_hover.jpg" onclick="changeImage(this)" alt="Nike Air Max 270 Side View">
-          <img class="thumbnail" src="https://assets.adidas.com/images/h_2000,f_auto,q_auto,fl_lossy,c_fill,g_auto/3cd6f070c1004af0a07ab0bb3b9248ae_9366/Essentials_Allover_Print_Jogger_Set_Kids_Blue_IW1002_04_laydown.jpg" onclick="changeImage(this)" alt="Nike Air Max 270 Top View">
-          <img class="thumbnail" src="https://assets.adidas.com/images/h_2000,f_auto,q_auto,fl_lossy,c_fill,g_auto/257d472d140e4534b6204716b31f6892_9366/Essentials_Allover_Print_Jogger_Set_Kids_Blue_IW1002_05_laydown.jpg" onclick="changeImage(this)" alt="Nike Air Max 270 Back View">
+          <img class="thumbnail active" src=https://static.nike.com/a/images/t_PDP_1728_v1/f_auto,q_auto:eco/64ff2848-6ccf-4361-b314-e7ddef820340/B+NK+DF+SS+MILER+TOP.png" onclick="changeImage(this)" alt="Nike Air Max 270 Front View">
+          <img class="thumbnail" src="https://static.nike.com/a/images/t_PDP_1728_v1/f_auto,q_auto:eco/7f123e9c-650e-4fb3-b1f2-6e2c6822d1ae/B+NK+DF+SS+MILER+TOP.png" onclick="changeImage(this)" alt="Nike Air Max 270 Side View">
+          <img class="thumbnail" src="https://static.nike.com/a/images/t_PDP_1728_v1/f_auto,q_auto:eco/762a7356-7b59-4331-bf55-a097b3e3c981/B+NK+DF+SS+MILER+TOP.png" onclick="changeImage(this)" alt="Nike Air Max 270 Top View">
+          <img class="thumbnail" src="https://static.nike.com/a/images/t_PDP_1728_v1/f_auto,q_auto:eco/a06b00da-82d6-4a8a-a6e4-eed7916a880b/B+NK+DF+SS+MILER+TOP.png" onclick="changeImage(this)" alt="Nike Air Max 270 Back View">
         </div>
       </div>
 
       <div class="product-details">
-        <h1>Essentials Allover Print Jogger Set</h1>
-        <h2>₹ 1999.50</h2>
+        <h1>Kids' (Boys') Training Top</h1>
+        <h2>₹ 1395.00</h2>
 
         <p><strong>Description:</strong> Stand out in comfort with the Essentials Allover Print Jogger Set, featuring a bold design and a soft, cozy feel. Perfect for lounging or stepping out, it brings effortless style to your everyday look. </p>
 
@@ -366,7 +366,7 @@
         </div>
 
         <div class="add-to-bag-container">
-          <button class="add-to-bag" onclick="addToCart(this)" data-id="202" data-name="Essentials Allover Print Jogger Set" data-price="1999.50">
+          <button class="add-to-bag" onclick="addToCart(this)" data-id="202" data-name="Kids' (Boys') Training Top" data-price="1395.00">
   		        Add to Bag
 	        </button>
         </div>
