--- a/basketball_product6.html
+++ b/basketball_product6.html
@@ -3,7 +3,7 @@
 <head style="background-color: white;">
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>IU Single Action Air Pump</title>
+  <title>Jordan Essential's Air Pump</title>
   <style>
     html,body {
             margin: 0;
@@ -340,21 +340,19 @@
 
     <div class="product-container">
       <div class="product-images">
-        <img id="mainImage" class="main-image" src="https://contents.mediadecathlon.com/p2439547/630b8e1d4633413f15f48cb24e16ef72/p2439547.jpg" alt="Cricket T-shirt" />
+        <img id="mainImage" class="main-image" src="https://static.nike.com/a/images/t_PDP_1728_v1/f_auto,q_auto:eco,u_126ab356-44d8-4a06-89b4-fcdcc8df0245,c_scale,fl_relative,w_1.0,h_1.0,fl_layer_apply/94b0882a-e39e-417f-848d-0a9cd173f374/JORDAN+ESSENTIAL+BALL+PUMP.png" alt="Cricket T-shirt" />
         
         <div class="thumbnail-container">
-          <img class="thumbnail active" src="https://contents.mediadecathlon.com/p2439547/630b8e1d4633413f15f48cb24e16ef72/p2439547.jpg" onclick="changeImage(this)" alt="Nike Air Max 270 Front View">
-          <img class="thumbnail" src="https://contents.mediadecathlon.com/p2439544/ee9a62653b040031ea32cebb945bf10e/p2439544.jpg" onclick="changeImage(this)" alt="Nike Air Max 270 Side View">
-          <img class="thumbnail" src="https://contents.mediadecathlon.com/p2439545/a5adac93844d486ea2ad838b959594de/p2439545.jpg" onclick="changeImage(this)" alt="Nike Air Max 270 Top View">
-          <img class="thumbnail" src="https://contents.mediadecathlon.com/p2439548/0df9bc23248c4d15235f7a0b9e70cae1/p2439548.jpg" onclick="changeImage(this)" alt="Nike Air Max 270 Back View">
+          <img class="thumbnail active" src="https://static.nike.com/a/images/t_PDP_1728_v1/f_auto,q_auto:eco,u_126ab356-44d8-4a06-89b4-fcdcc8df0245,c_scale,fl_relative,w_1.0,h_1.0,fl_layer_apply/94b0882a-e39e-417f-848d-0a9cd173f374/JORDAN+ESSENTIAL+BALL+PUMP.png" onclick="changeImage(this)" alt="Nike Air Max 270 Front View">
+
         </div>
       </div>
 
       <div class="product-details">
-        <h1>Decathlon IU Single Action Air Pump</h1>
+        <h1>Jordan Essential's Air Pump</h1>
         <h2>₹199.99</h2>
 
-        <p><strong>Description:</strong> Power up every play with the Decathlon IU Single Action Air Pump—compact, reliable, and ready to inflate your game anytime, anywhere with smooth, effortless precision.
+        <p><strong>Description:</strong> Power up every play with the Jordan Essential's Air Pump, reliable, and ready to inflate your game anytime, anywhere with smooth, effortless precision.
 </p>
 
         <div class="size-selector">
