--- a/basketball_product5.html
+++ b/basketball_product5.html
@@ -350,10 +350,10 @@
       </div>
 
       <div class="product-details">
-        <h1>Decathlon Tarmak BT500</h1>
+        <h1>Nike Jordan Ultimate 2.0</h1>
         <h2>₹1599.99</h2>
 
-        <p><strong>Description:</strong> Elevate your outdoor game with the Tarmak BT500—built tough for the street, designed for control, and made for players who bring intensity to every bounce, shot, and drive.
+        <p><strong>Description:</strong> Elevate your outdoor game with the Jordan 2.0—built tough for the street, designed for control, and made for players who bring intensity to every bounce, shot, and drive.
 </p>
 
         <div class="size-selector">
