--- a/kids_product2.html
+++ b/kids_product2.html
@@ -3,7 +3,7 @@
 <head style="background-color: white;">
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Kids' (Boys') Training Top</title>
+  <title>Boys' Training Top</title>
   <style>
     html,body {
             margin: 0;
@@ -350,7 +350,7 @@
       </div>
 
       <div class="product-details">
-        <h1>Kids' (Boys') Training Top</h1>
+        <h1>Boys' Training Top</h1>
         <h2>₹ 1395.00</h2>
 
         <p><strong>Description:</strong> Stand out in comfort with the Essentials Allover Print Jogger Set, featuring a bold design and a soft, cozy feel. Perfect for lounging or stepping out, it brings effortless style to your everyday look. </p>
@@ -366,7 +366,7 @@
         </div>
 
         <div class="add-to-bag-container">
-          <button class="add-to-bag" onclick="addToCart(this)" data-id="202" data-name="Kids' (Boys') Training Top" data-price="1395.00">
+          <button class="add-to-bag" onclick="addToCart(this)" data-id="202" data-name="Boys' Training Top" data-price="1395.00">
   		        Add to Bag
 	        </button>
         </div>
