--- a/kids_product3.html
+++ b/kids_product3.html
@@ -3,7 +3,7 @@
 <head style="background-color: white;">
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Disney Mickey Mouse Tee Set</title>
+  <title>Nike Dri-FIT Football Replica Shirt</title>
   <style>
     html,body {
             margin: 0;
@@ -340,19 +340,19 @@
 
     <div class="product-container">
       <div class="product-images">
-        <img id="mainImage" class="main-image" src="https://assets.adidas.com/images/h_2000,f_auto,q_auto,fl_lossy,c_fill,g_auto/d85bb8c107ff4bca8b312bbe1e11e376_9366/Disney_Mickey_Mouse_Tee_Set_Orange_IV9648_03_laydown_hover.jpg" alt="Nike Air Max 270" />
+        <img id="mainImage" class="main-image" src="https://static.nike.com/a/images/t_PDP_1728_v1/f_auto,q_auto:eco/f69e7da5-6d32-47f4-b4e3-18f17f51bbe0/LFC+Y+NK+DF+JSY+SS+STAD+AW.png" alt="Nike Air Max 270" />
         
         <div class="thumbnail-container">
-          <img class="thumbnail active" src="https://assets.adidas.com/images/h_2000,f_auto,q_auto,fl_lossy,c_fill,g_auto/d85bb8c107ff4bca8b312bbe1e11e376_9366/Disney_Mickey_Mouse_Tee_Set_Orange_IV9648_03_laydown_hover.jpg" onclick="changeImage(this)" alt="Nike Air Max 270 Front View">
-          <img class="thumbnail" src="https://assets.adidas.com/images/h_2000,f_auto,q_auto,fl_lossy,c_fill,g_auto/9126d91f029a462898f6b8dcdea586f0_9366/Disney_Mickey_Mouse_Tee_Set_Orange_IV9648_04_laydown.jpg" onclick="changeImage(this)" alt="Nike Air Max 270 Side View">
-          <img class="thumbnail" src="https://assets.adidas.com/images/h_2000,f_auto,q_auto,fl_lossy,c_fill,g_auto/88ee8bd4cb4d4466abb97b5341cf1839_9366/Disney_Mickey_Mouse_Tee_Set_Orange_IV9648_01_laydown.jpg" onclick="changeImage(this)" alt="Nike Air Max 270 Top View">
-          <img class="thumbnail" src="https://assets.adidas.com/images/h_2000,f_auto,q_auto,fl_lossy,c_fill,g_auto/1625cb05262543a6b0f82ec59487e86f_9366/Disney_Mickey_Mouse_Tee_Set_Orange_IV9648_05_laydown.jpg" onclick="changeImage(this)" alt="Nike Air Max 270 Back View">
+          <img class="https://static.nike.com/a/images/t_PDP_1728_v1/f_auto,q_auto:eco/f69e7da5-6d32-47f4-b4e3-18f17f51bbe0/LFC+Y+NK+DF+JSY+SS+STAD+AW.png" onclick="changeImage(this)" alt="Nike Air Max 270 Front View">
+          <img class="thumbnail" src="https://static.nike.com/a/images/t_PDP_1728_v1/f_auto,q_auto:eco/d97689ab-0e43-4cc1-929a-5308edab84fd/LFC+Y+NK+DF+JSY+SS+STAD+AW.png" onclick="changeImage(this)" alt="Nike Air Max 270 Side View">
+          <img class="thumbnail" src="https://static.nike.com/a/images/t_PDP_1728_v1/f_auto,q_auto:eco/157449d8-2d2c-4c90-ba87-f65c3cfb50ad/LFC+Y+NK+DF+JSY+SS+STAD+AW.png" onclick="changeImage(this)" alt="Nike Air Max 270 Top View">
+          <img class="thumbnail" src="https://static.nike.com/a/images/t_PDP_1728_v1/f_auto,q_auto:eco/00a791f3-6810-4f04-9598-0216020854cc/LFC+Y+NK+DF+JSY+SS+STAD+AW.png" onclick="changeImage(this)" alt="Nike Air Max 270 Back View">
         </div>
       </div>
 
       <div class="product-details">
-        <h1>Disney Mickey Mouse Tee Set</h1>
-        <h2>₹ 1799.50</h2>
+        <h1>Nike Dri-FIT Football Replica Shirt</h1>
+        <h2>₹ 3995.00</h2>
 
         <p><strong>Description:</strong> Add a touch of magic to your wardrobe with the Disney Mickey Mouse Tee Set, featuring playful graphics and soft, all-day comfort. Perfect for fans of all ages, it blends iconic style with everyday fun. </p>
 
@@ -367,7 +367,7 @@
         </div>
 
       <div class="add-to-bag-container">
-          <button class="add-to-bag" onclick="addToCart(this)" data-id="203" data-name="Disney Mickey Mouse Tee Set" data-price="1799.50">
+          <button class="add-to-bag" onclick="addToCart(this)" data-id="203" data-name="Nike Dri-FIT Football Replica Shirt" data-price="3995.00">
   		        Add to Bag
 	        </button>
         </div>
