--- a/kids_product5.html
+++ b/kids_product5.html
@@ -3,7 +3,7 @@
 <head style="background-color: white;">
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Marvel Spider-Man T-Shirt</title>
+  <title>Girls' Dri-FIT Short-Sleeve Top</title>
   <style>
     html,body {
             margin: 0;
@@ -350,8 +350,8 @@
       </div>
 
       <div class="product-details">
-        <h1>Marvel Spider-Man T-Shirt</h1>
-        <h2>₹ 2799.00</h2>
+        <h1>Girls' Dri-FIT Short-Sleeve Top</h1>
+        <h2>₹ 1495.00</h2>
 
         <p><strong>Description:</strong> Swing into action with the Marvel Spider-Man T-Shirt, featuring bold graphics of your favorite web-slinger. Made from soft, breathable fabric, it’s perfect for everyday adventures and superhero-sized comfort.</p>
 
@@ -366,7 +366,7 @@
         </div>
 
         <div class="add-to-bag-container">
-          <button class="add-to-bag" onclick="addToCart(this)" data-id="205" data-name="Marvel Spider-Man T-Shirt" data-price="2799.00">
+          <button class="add-to-bag" onclick="addToCart(this)" data-id="205" data-name="Girls' Dri-FIT Short-Sleeve Top" data-price="1495.00">
   		        Add to Bag
 	        </button>
         </div>
