--- a/men_product2.html
+++ b/men_product2.html
@@ -3,7 +3,7 @@
 <head style="background-color: white;">
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Nike Real Madrid 24/25 Home Jersey</title>
+  <title>Nike Tech Men's Full-Zip Windrunner Hoodie</title>
   <style>
     html,body {
             margin: 0;
@@ -339,21 +339,21 @@
 
     <div class="product-container">
       <div class="product-images">
-        <img id="mainImage" class="main-image" src="https://assets.adidas.com/images/h_2000,f_auto,q_auto,fl_lossy,c_fill,g_auto/bba09c80cdf3416c9957d5ea0dee0738_9366/Real_Madrid_24-25_Home_Jersey_White_IU5011_HM1.jpg" alt="Nike Air Max 270" />
+        <img id="mainImage" class="main-image" src="https://static.nike.com/a/images/t_PDP_1728_v1/f_auto,q_auto:eco/dbccfdba-bcdd-4bc4-b95f-e58727cfbfa4/M+NK+TCH+FLC+FZ+WR+HOODIE.png" alt="Nike Air Max 270" />
         
         <div class="thumbnail-container">
-          <img class="thumbnail active" src="https://assets.adidas.com/images/h_2000,f_auto,q_auto,fl_lossy,c_fill,g_auto/bba09c80cdf3416c9957d5ea0dee0738_9366/Real_Madrid_24-25_Home_Jersey_White_IU5011_HM1.jpg" onclick="changeImage(this)" alt="Nike Air Max 270 Front View">
-          <img class="thumbnail" src="https://assets.adidas.com/images/h_2000,f_auto,q_auto,fl_lossy,c_fill,g_auto/15842c1060dc4e12a9f9a272f8ac5ea0_9366/Real_Madrid_24-25_Home_Jersey_White_IU5011_HM3_hover.jpg" onclick="changeImage(this)" alt="Nike Air Max 270 Side View">
-          <img class="thumbnail" src="https://assets.adidas.com/images/h_2000,f_auto,q_auto,fl_lossy,c_fill,g_auto/4f91e3956f81489ea1fd449a5156294c_9366/Real_Madrid_24-25_Home_Jersey_White_IU5011_HM4.jpg" onclick="changeImage(this)" alt="Nike Air Max 270 Top View">
-          <img class="thumbnail" src="https://assets.adidas.com/images/h_2000,f_auto,q_auto,fl_lossy,c_fill,g_auto/e34cdc26376e4bf9bffc4e70e0574006_9366/Real_Madrid_24-25_Home_Jersey_White_IU5011_HM6.jpg" onclick="changeImage(this)" alt="Nike Air Max 270 Back View">
+          <img class="thumbnail active" src="https://static.nike.com/a/images/t_PDP_1728_v1/f_auto,q_auto:eco/dbccfdba-bcdd-4bc4-b95f-e58727cfbfa4/M+NK+TCH+FLC+FZ+WR+HOODIE.png" onclick="changeImage(this)" alt="Nike Air Max 270 Front View">
+          <img class="thumbnail" src="https://static.nike.com/a/images/t_PDP_1728_v1/f_auto,q_auto:eco/d3025176-6dcd-43c6-8e82-8ad30207389b/M+NK+TCH+FLC+FZ+WR+HOODIE.png" onclick="changeImage(this)" alt="Nike Air Max 270 Side View">
+          <img class="thumbnail" src="https://static.nike.com/a/images/t_PDP_1728_v1/f_auto,q_auto:eco/2fffacda-503b-4a91-8d11-d93aee2ff367/M+NK+TCH+FLC+FZ+WR+HOODIE.png" onclick="changeImage(this)" alt="Nike Air Max 270 Top View">
+          <img class="thumbnail" src="https://static.nike.com/a/images/t_PDP_1728_v1/f_auto,q_auto:eco/45bba4f9-cc34-4e3c-b86d-8989ad0ae3c7/M+NK+TCH+FLC+FZ+WR+HOODIE.png" onclick="changeImage(this)" alt="Nike Air Max 270 Back View">
         </div>
       </div>
 
       <div class="product-details">
-        <h1>Nike Real Madrid 24/25 Home Jersey</h1>
+        <h1>Nike Tech Men's Full-Zip Windrunner Hoodie</h1>
         <h2> ₹4,799.50</h2>
 
-        <p><strong>Description:</strong> The Nike Real Madrid 24/25 Home Jersey pairs iconic white with modern performance fabric — made for comfort, built for champions.</p>
+        <p><strong>Description:</strong> The Nike Tech Men's Full-Zip Windrunner Hoodie pairs iconic with modern performance fabric — made for comfort, built for champions.</p>
 
         <div class="size-selector">
           <strong>Select Size:</strong>
