--- a/kids_product2.html
+++ b/kids_product2.html
@@ -353,7 +353,7 @@
         <h1>Boys' Training Top</h1>
         <h2>₹ 1395.00</h2>
 
-        <p><strong>Description:</strong> Stand out in comfort with the Essentials Allover Print Jogger Set, featuring a bold design and a soft, cozy feel. Perfect for lounging or stepping out, it brings effortless style to your everyday look. </p>
+        <p><strong>Description:</strong> Gear up for action with the Boys' Training Top, designed with breathable, sweat-wicking fabric to keep him cool and focused. With a lightweight feel and athletic fit, it’s perfect for practice, play, and everything in between. </p>
 
         <div class="size-selector">
           <strong>Select Size:</strong>
