--- a/kids_product3.html
+++ b/kids_product3.html
@@ -354,7 +354,7 @@
         <h1>Nike Dri-FIT Football Replica Shirt</h1>
         <h2>₹ 3995.00</h2>
 
-        <p><strong>Description:</strong> Add a touch of magic to your wardrobe with the Disney Mickey Mouse Tee Set, featuring playful graphics and soft, all-day comfort. Perfect for fans of all ages, it blends iconic style with everyday fun. </p>
+        <p><strong>Description:</strong> Show your team pride with the Nike Dri-FIT Football Replica Shirt, crafted with sweat-wicking fabric to keep you cool and dry. Featuring authentic details and a performance-ready fit, it's made for fans and players alike. </p>
 
         <div class="size-selector">
           <strong>Select Size:</strong>
