--- a/kids_product5.html
+++ b/kids_product5.html
@@ -339,13 +339,13 @@
 
     <div class="product-container">
       <div class="product-images">
-        <img id="mainImage" class="main-image" src="https://assets.adidas.com/images/h_2000,f_auto,q_auto,fl_lossy,c_fill,g_auto/a99f066d781a463e934f394c4833ad4e_9366/ADIDAS_MARVEL_SPIDER-MAN_T-SHIRT_Red_JF3654_25_model.jpg" alt="Nike Air Max 270" />
+        <img id="mainImage" class="main-image" src="https://static.nike.com/a/images/t_PDP_1728_v1/f_auto,q_auto:eco/633fae47-d535-4956-8196-18f107c03601/G+NK+DF+ONE+STD+SS+TOP+HBR.png" alt="Nike Air Max 270" />
         
         <div class="thumbnail-container">
-          <img class="thumbnail active" src="https://assets.adidas.com/images/h_2000,f_auto,q_auto,fl_lossy,c_fill,g_auto/a99f066d781a463e934f394c4833ad4e_9366/ADIDAS_MARVEL_SPIDER-MAN_T-SHIRT_Red_JF3654_25_model.jpg" onclick="changeImage(this)" alt="Nike Air Max 270 Front View">
-          <img class="thumbnail" src="https://assets.adidas.com/images/h_2000,f_auto,q_auto,fl_lossy,c_fill,g_auto/4ba535b9074a47f0b3fb2074a0d055fb_9366/ADIDAS_MARVEL_SPIDER-MAN_T-SHIRT_Red_JF3654_01_laydown.jpg" onclick="changeImage(this)" alt="Nike Air Max 270 Side View">
-          <img class="thumbnail" src="https://assets.adidas.com/images/h_2000,f_auto,q_auto,fl_lossy,c_fill,g_auto/e44d942f13914ae8b6c7024ceb0293a1_9366/ADIDAS_MARVEL_SPIDER-MAN_T-SHIRT_Red_JF3654_41_detail.jpg" onclick="changeImage(this)" alt="Nike Air Max 270 Top View">
-          <img class="thumbnail" src="https://assets.adidas.com/images/h_2000,f_auto,q_auto,fl_lossy,c_fill,g_auto/afffb7d8fb4248dcbdeb45700ddd928d_9366/ADIDAS_MARVEL_SPIDER-MAN_T-SHIRT_Red_JF3654_42_detail.jpg" onclick="changeImage(this)" alt="Nike Air Max 270 Back View">
+          <img class="thumbnail active" src="https://static.nike.com/a/images/t_PDP_1728_v1/f_auto,q_auto:eco/633fae47-d535-4956-8196-18f107c03601/G+NK+DF+ONE+STD+SS+TOP+HBR.png" onclick="changeImage(this)" alt="Nike Air Max 270 Front View">
+          <img class="thumbnail" src="https://static.nike.com/a/images/t_PDP_1728_v1/f_auto,q_auto:eco/3d144e08-5c82-4e1e-9d54-b2bad2a4d7e0/G+NK+DF+ONE+STD+SS+TOP+HBR.png" onclick="changeImage(this)" alt="Nike Air Max 270 Side View">
+          <img class="thumbnail" src="https://static.nike.com/a/images/t_PDP_1728_v1/f_auto,q_auto:eco/5c1f01b9-dff0-4ff0-88cf-757c575b56f2/G+NK+DF+ONE+STD+SS+TOP+HBR.png" onclick="changeImage(this)" alt="Nike Air Max 270 Top View">
+          <img class="thumbnail" src="https://static.nike.com/a/images/t_PDP_1728_v1/f_auto,q_auto:eco/48b265f5-2061-481e-b219-1f0eb23b9b4d/G+NK+DF+ONE+STD+SS+TOP+HBR.png" onclick="changeImage(this)" alt="Nike Air Max 270 Back View">
         </div>
       </div>
 
@@ -353,7 +353,7 @@
         <h1>Girls' Dri-FIT Short-Sleeve Top</h1>
         <h2>₹ 1495.00</h2>
 
-        <p><strong>Description:</strong> Swing into action with the Marvel Spider-Man T-Shirt, featuring bold graphics of your favorite web-slinger. Made from soft, breathable fabric, it’s perfect for everyday adventures and superhero-sized comfort.</p>
+        <p><strong>Description:</strong> Keep her cool and confident in the Girls' Dri-FIT Short-Sleeve Top, featuring moisture-wicking fabric for dry, breathable comfort. With a lightweight feel and sporty style, it’s perfect for active days and everyday wear.</p>
 
         <div class="size-selector">
           <strong>Select Size:</strong>
