--- a/men_product3.html
+++ b/men_product3.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Arsenal UBP Tee</title>
+  <title>Inter Milan 2024/25 Stadium Home Jersey</title>
   <style>
     html,body {
             margin: 0;
@@ -339,20 +339,20 @@
 
     <div class="product-container">
       <div class="product-images">
-        <img id="mainImage" class="main-image" src="https://assets.adidas.com/images/h_2000,f_auto,q_auto,fl_lossy,c_fill,g_auto/abd6cdc8afcd418ca600e2bd42108700_9366/Arsenal_UBP_Tee_Burgundy_JN1964_HM1.jpg" alt="Classic Casuals" />
+        <img id="mainImage" class="main-image" src="https://static.nike.com/a/images/t_PDP_1728_v1/f_auto,q_auto:eco/dabe439f-ef0a-4d68-8d18-a7030846efc8/INTER+M+NK+DF+JSY+SS+STAD+HM.png" alt="Classic Casuals" />
         
         <div class="thumbnail-container">
-          <img class="thumbnail active" src="https://assets.adidas.com/images/h_2000,f_auto,q_auto,fl_lossy,c_fill,g_auto/abd6cdc8afcd418ca600e2bd42108700_9366/Arsenal_UBP_Tee_Burgundy_JN1964_HM1.jpg" onclick="changeImage(this)" alt="Front View">
-          <img class="thumbnail" src="https://assets.adidas.com/images/h_2000,f_auto,q_auto,fl_lossy,c_fill,g_auto/b223dbd4e0f34ee1b518e763a1225b48_9366/Arsenal_UBP_Tee_Burgundy_JN1964_HM3_hover.jpg" onclick="changeImage(this)" alt="Side View">
-          <img class="thumbnail" src="https://assets.adidas.com/images/h_2000,f_auto,q_auto,fl_lossy,c_fill,g_auto/ece36b658a4c449daed08959e9d2a569_9366/Arsenal_UBP_Tee_Burgundy_JN1964_HM4.jpg" onclick="changeImage(this)" alt="Top View">
+          <img class="thumbnail active" src="https://static.nike.com/a/images/t_PDP_1728_v1/f_auto,q_auto:eco/dabe439f-ef0a-4d68-8d18-a7030846efc8/INTER+M+NK+DF+JSY+SS+STAD+HM.png" onclick="changeImage(this)" alt="Front View">
+          <img class="thumbnail" src="https://static.nike.com/a/images/t_PDP_1728_v1/f_auto,q_auto:eco/d3cf2238-4525-41e1-b4b7-f5b3b71a2f4c/INTER+M+NK+DF+JSY+SS+STAD+HM.png" onclick="changeImage(this)" alt="Side View">
+          <img class="thumbnail" src="https://static.nike.com/a/images/t_PDP_1728_v1/f_auto,q_auto:eco/9fd8525b-51f9-48b8-8094-5f13dbd8321f/INTER+M+NK+DF+JSY+SS+STAD+HM.png" onclick="changeImage(this)" alt="Top View">
         </div>
       </div>
 
       <div class="product-details">
-        <h1>Arsenal UBP Tee</h1>
+        <h1>nter Milan 2024/25 Stadium Home Jersey</h1>
         <h2> ₹3,799</h2>
 
-        <p><strong>Description:</strong> Stylish yet laid-back, these classic casual shoes are crafted for everyday comfort. Perfect for hangouts or a walk in the city, their minimal design goes with everything.</p>
+        <p><strong>Description:</strong> Celebrate Inter Milan's historic 20th Serie A title with the 2024/25 Stadium Home Jersey—a bold fusion of tradition and innovation.</p>
 
         <div class="size-selector">
           <strong>Select Size:</strong>
