--- a/kids_product3.html
+++ b/kids_product3.html
@@ -343,7 +343,7 @@
         <img id="mainImage" class="main-image" src="https://static.nike.com/a/images/t_PDP_1728_v1/f_auto,q_auto:eco/f69e7da5-6d32-47f4-b4e3-18f17f51bbe0/LFC+Y+NK+DF+JSY+SS+STAD+AW.png" alt="Nike Air Max 270" />
         
         <div class="thumbnail-container">
-          <img class="https://static.nike.com/a/images/t_PDP_1728_v1/f_auto,q_auto:eco/f69e7da5-6d32-47f4-b4e3-18f17f51bbe0/LFC+Y+NK+DF+JSY+SS+STAD+AW.png" onclick="changeImage(this)" alt="Nike Air Max 270 Front View">
+          <img class="thumbnail active" src="https://static.nike.com/a/images/t_PDP_1728_v1/f_auto,q_auto:eco/f69e7da5-6d32-47f4-b4e3-18f17f51bbe0/LFC+Y+NK+DF+JSY+SS+STAD+AW.png" onclick="changeImage(this)" alt="Nike Air Max 270 Front View">
           <img class="thumbnail" src="https://static.nike.com/a/images/t_PDP_1728_v1/f_auto,q_auto:eco/d97689ab-0e43-4cc1-929a-5308edab84fd/LFC+Y+NK+DF+JSY+SS+STAD+AW.png" onclick="changeImage(this)" alt="Nike Air Max 270 Side View">
           <img class="thumbnail" src="https://static.nike.com/a/images/t_PDP_1728_v1/f_auto,q_auto:eco/157449d8-2d2c-4c90-ba87-f65c3cfb50ad/LFC+Y+NK+DF+JSY+SS+STAD+AW.png" onclick="changeImage(this)" alt="Nike Air Max 270 Top View">
           <img class="thumbnail" src="https://static.nike.com/a/images/t_PDP_1728_v1/f_auto,q_auto:eco/00a791f3-6810-4f04-9598-0216020854cc/LFC+Y+NK+DF+JSY+SS+STAD+AW.png" onclick="changeImage(this)" alt="Nike Air Max 270 Back View">
