--- a/men_athletix.html
+++ b/men_athletix.html
@@ -293,15 +293,15 @@
             </div>
             <div class="product-card">
                 <a href="men_product2.html">
-                    <img src="https://assets.adidas.com/images/h_2000,f_auto,q_auto,fl_lossy,c_fill,g_auto/bba09c80cdf3416c9957d5ea0dee0738_9366/Real_Madrid_24-25_Home_Jersey_White_IU5011_HM1.jpg" alt="Training Shoes">
-                    <h3>Real Madrid 24/25 Home Jersey</h3>
+                    <img src="https://static.nike.com/a/images/t_PDP_1728_v1/f_auto,q_auto:eco/dbccfdba-bcdd-4bc4-b95f-e58727cfbfa4/M+NK+TCH+FLC+FZ+WR+HOODIE.png" alt="Training Shoes">
+                    <h3>Nike Windrunner Hoodie</h3>
                 </a>
                 <p> ₹4,799</p>
             </div>
             <div class="product-card">
                 <a href="men_product3.html">
-                    <img src="https://assets.adidas.com/images/h_2000,f_auto,q_auto,fl_lossy,c_fill,g_auto/abd6cdc8afcd418ca600e2bd42108700_9366/Arsenal_UBP_Tee_Burgundy_JN1964_HM1.jpg" alt="Casual Shoes">
-                    <h3>Arsenal UBP Tee</h3>
+                    <img src="https://static.nike.com/a/images/t_PDP_1728_v1/f_auto,q_auto:eco/dabe439f-ef0a-4d68-8d18-a7030846efc8/INTER+M+NK+DF+JSY+SS+STAD+HM.png" alt="Casual Shoes">
+                    <h3>Inter Milan Home Jersey</h3>
                 </a>
                 <p> ₹3,899</p>
             </div>
